# pytest-benchmem

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-config.json  404.html  AGENTS.md  CHANGELOG.md  README.md  docs_macros.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot-auto-merge.yaml  docs.yaml  nightly.yaml  release.yaml
catch-regressions/: index.html
changelog/: index.html
compare-plot/: compare-plot.ipynb  index.html
compare-runs/: index.html
dims/: index.html
docs/: api.md  catch-regressions.md  changelog.md  compare-plot.md  compare-runs.md  dims.md  getting-started.md  index.md  metrics.md  profiling.md  reference.md  sweeps.md  visualize.md  walkthrough.md
docs/gallery/: linopy-memory.md  pypsa-shapes.md
docs/javascripts/: notebook-prompts.js
docs/stylesheets/: extra.css
examples/: __init__.py  kdtree.py  pairwise.py
getting-started/: index.html
metrics/: index.html
profiling/: index.html
reference/: index.html
scripts/: gen_doc_assets.py
search/: search_index.json
src/benchkit/: __init__.py  bench.py  case.py  cli.py  compare.py  memray.py  plotting.py  snapshot.py
src/peakbench/: __init__.py  cli.py  compare.py  memray.py  plotting.py  pytest_plugin.py  snapshot.py
src/pytest_benchmem/: __init__.py  cli.py  combined.py  compare.py  format.py  memray.py  plotting.py  pytest_plugin.py  scaling.py  snapshot.py  sweep.py  tables.py
src/pytest_benchmem/compare/: __init__.py  diff.py  gate.py  model.py  run.py  table.py
stylesheets/: extra.css
sweeps/: index.html
tests/: _builders.py  test_case.py  test_cli.py  test_combined.py  test_compare.py  test_distribution.py  test_examples.py  test_inline_compare.py  test_memray.py  test_memray_platform.py  test_plotting.py  test_plugin.py  test_scaling.py  test_snapshot.py  test_sweep.py  test_tables.py
visualize/: index.html  visualize.ipynb
