[project]
name = "pytest-benchmem"
dynamic = ["version"]
description = "The memory companion to pytest-benchmark: a memray peak-memory pass on the same test, plus dims-aware plots and cross-version sweeps."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Felix Bumann" }]
keywords = ["benchmark", "memory", "memray", "performance", "pytest", "pytest-benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
    "Typing :: Typed",
]
dependencies = [
    "pytest>=7",
    "pytest-benchmark>=4,<6",
    "memray>=1.11; platform_system == 'Linux' or platform_system == 'Darwin'",
]

[project.optional-dependencies]
plot = ["pandas", "plotly>=5", "typer>=0.12"]

[project.scripts]
benchmem = "pytest_benchmem.cli:app"

[project.entry-points.pytest11]
benchmem = "pytest_benchmem.pytest_plugin"

[project.urls]
Homepage = "https://github.com/fluxopt/pytest-benchmem"
Documentation = "https://fluxopt.github.io/pytest-benchmem/"
Repository = "https://github.com/fluxopt/pytest-benchmem"
Issues = "https://github.com/fluxopt/pytest-benchmem/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = ["ruff", "mypy", "pre-commit", "pytest-benchmem[plot]", { include-group = "docs" }]
docs = [
    "jupytext",
    "ipykernel",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]
ignore = ["D105", "D107", "D203", "D205", "D213", "D401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_benchmem"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "plotly", "plotly.*", "memray", "memray.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
